fix vsm-list overflow scroll on rtl

--- a/src/scss/vue-sidebar-menu.scss
+++ b/src/scss/vue-sidebar-menu.scss
@@ -34,7 +34,7 @@
       & > .vsm-list {
         padding-right: 0px;
         padding-left: 17px;
-        float: right;
+        margin-left: -17px;
       }
       &:after {
         content: '';
